--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         <section>
             <div class="chart-description">
-                <h2>Section 3: wk1_fdi</h2>
+                <h2>Section 3: Inflation</h2>
                 <p> <!-- This is a paragraph, it's the main way to display text on a web page -->
                     Inward, Million US dollars, exchange rate converted, 2024-Q1
                 </p>
@@ -97,7 +97,7 @@
 
         let figure_1_spec = "https://raw.githubusercontent.com/EconomicsObservatory/courses/main/2/s2_chart2.json"; // We're storing the URL of the graph we want to display in a variable
         let figure_2_spec = "wk1_unem_rate"                                                                                                           // You should have a spec for a graph in this same folder. Just specify its name here, e.g. let figure_1_spec = "chart1.json"
-        let figure_3_spec = "wk1_csv" 
+        let figure_3_spec = "wk1_inf" 
 
         vegaEmbed('#Location1', figure_1_spec) // We're using the vegaEmbed function to put a graph in the element with id figure_1
         vegaEmbed('#Location2', figure_2_spec)
