--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="chart-description">
                 <h2>Section 2: Unemployment rate</h2>
                 <p> <!-- This is a paragraph, it's the main way to display text on a web page -->
-                    Unemplyment rate in the UK.
+                    Unemployment rate (thousands, +16) in the UK seasonally adjusted
                 </p>
             </div>
             <figure id="Location2"></figure> <!-- we give it an id so we can put a vega-lite graph here with VegaEmbed -->
@@ -84,9 +84,9 @@
 
         <section>
             <div class="chart-description">
-                <h2>Section 3: Inflation</h2>
+                <h2>Section 3: Inflation of four G7 countries</h2>
                 <p> <!-- This is a paragraph, it's the main way to display text on a web page -->
-                    Inward, Million US dollars, exchange rate converted, 2024-Q1
+                    source: OECD
                 </p>
             </div>
             <figure id="Location3"></figure> <!-- we give it an id so we can put a vega-lite graph here with VegaEmbed -->
