--- a/index.html
+++ b/index.html
@@ -74,22 +74,31 @@
 
         <section>
             <div class="chart-description">
-                <h2>Section 2: Unemployment rate</h2>
+                <h2>Section 2: Unemployment rate_UK</h2>
                 <p> <!-- This is a paragraph, it's the main way to display text on a web page -->
                     Unemployment rate (thousands, +16) in the UK seasonally adjusted
                 </p>
             </div>
             <figure id="Location2"></figure> <!-- we give it an id so we can put a vega-lite graph here with VegaEmbed -->
         </section>
+     <section>
+            <div class="chart-description">
+                <h2>Section 3: Unemployment rate_3 countries</h2>
+                <p> <!-- This is a paragraph, it's the main way to display text on a web page -->
+                    Unemployment rate (UK, US, Canada)
+                </p>
+            </div>
+            <figure id="Location3"></figure> <!-- we give it an id so we can put a vega-lite graph here with VegaEmbed -->
+        </section>
 
         <section>
             <div class="chart-description">
-                <h2>Section 3: Inflation of four G7 countries</h2>
+                <h2>Section 4: Inflation of four G7 countries</h2>
                 <p> <!-- This is a paragraph, it's the main way to display text on a web page -->
                     source: OECD
                 </p>
             </div>
-            <figure id="Location3"></figure> <!-- we give it an id so we can put a vega-lite graph here with VegaEmbed -->
+            <figure id="Location4"></figure> <!-- we give it an id so we can put a vega-lite graph here with VegaEmbed -->
         </section>
     <!-- This is a script, it's a way to run JavaScript code on the page -->
     <script>
@@ -97,11 +106,13 @@
 
         let figure_1_spec = "https://raw.githubusercontent.com/EconomicsObservatory/courses/main/2/s2_chart2.json"; // We're storing the URL of the graph we want to display in a variable
         let figure_2_spec = "wk1_unem_rate"                                                                                                           // You should have a spec for a graph in this same folder. Just specify its name here, e.g. let figure_1_spec = "chart1.json"
-        let figure_3_spec = "wk_inf" 
+         let figure_3_spec = "wk1_unem_3countries"
+        let figure_4_spec = "wk_inf" 
 
         vegaEmbed('#Location1', figure_1_spec) // We're using the vegaEmbed function to put a graph in the element with id figure_1
         vegaEmbed('#Location2', figure_2_spec)
-        vegaEmbed('#Location3', figure_3_spec)
+         vegaEmbed('#Location3', figure_3_spec)
+        vegaEmbed('#Location4', figure_4_spec)
 
         // Do you want to add more graphs?
         // try defining a new variable for figure_3_spec, adding VegaEmbed for Location3, and adding a new section in the HTML
