--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 </head>
 
 <body> 
+    <div align="center">
 <!-- The body tag contains the elements that visitors to our page will see. -->
     <h1 class="big" style="margin-bottom: 0px;"> <!-- We have added a class to the header called "big" which we can use to style it in the CSS -->
         <!-- This is a header, it is the largest text on the page -->
@@ -122,7 +123,7 @@
 
 
     </script>
-
+    </div>
 </body>
     
 </html>
