--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="chart-description">
             <h2>Section 1: A basic chart</h2>
             <p> <!-- This is a paragraph, it's the main way to display text on a web page -->
-                We've organised the page into sections, with each section containing a chart, title and a description. Here, we can describe the chart and give some context. As a first example, we're using a basic chart from our repo.
+                We've organised the page into sections, with each section containing a chart, title and a description.  
             </p>
         </div>
         <figure id="Location1"></figure> <!-- we give it an id so we can put a vega-lite graph here with VegaEmbed -->
@@ -84,7 +84,7 @@
         </section>
      <section>
             <div class="chart-description">
-                <h2>Section 3: Unemployment rate_3 countries</h2>
+                <h2>Section 3: Unemployment rate (3 countries)</h2>
                 <p> <!-- This is a paragraph, it's the main way to display text on a web page -->
                     Unemployment rate (UK, US, Canada)
                 </p>
@@ -107,12 +107,12 @@
 
         let figure_1_spec = "https://raw.githubusercontent.com/EconomicsObservatory/courses/main/2/s2_chart2.json"; // We're storing the URL of the graph we want to display in a variable
         let figure_2_spec = "wk1_unem_rate"                                                                                                           // You should have a spec for a graph in this same folder. Just specify its name here, e.g. let figure_1_spec = "chart1.json"
-         let figure_3_spec = "wk1_unem_3countries"
+        let figure_3_spec = "wk1_unem_3countries"
         let figure_4_spec = "wk_inf" 
 
         vegaEmbed('#Location1', figure_1_spec) // We're using the vegaEmbed function to put a graph in the element with id figure_1
         vegaEmbed('#Location2', figure_2_spec)
-         vegaEmbed('#Location3', figure_3_spec)
+        vegaEmbed('#Location3', figure_3_spec)
         vegaEmbed('#Location4', figure_4_spec)
 
         // Do you want to add more graphs?
