--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
             <figure id="Location3"></figure> <!-- we give it an id so we can put a vega-lite graph here with VegaEmbed -->
         </section>
 
-        <section>
+       <section>
             <div class="chart-description">
-                <h2>Section 4: Inflation of four G7 countries</h2>
+                <h2>Section 4: Unemployment to population in Great Britain</h2>
                 <p> <!-- This is a paragraph, it's the main way to display text on a web page -->
                    
                 </p>
@@ -108,13 +108,13 @@
         let figure_1_spec = "https://raw.githubusercontent.com/EconomicsObservatory/courses/main/2/s2_chart2.json"; // We're storing the URL of the graph we want to display in a variable
         let figure_2_spec = "wk1_unem_rate"                                                                                                           // You should have a spec for a graph in this same folder. Just specify its name here, e.g. let figure_1_spec = "chart1.json"
         let figure_3_spec = "wk1_unem_3countries.json"
-        let figure_4_spec = "wk_inf" 
+        let figure_4_spec = "graph4.txt" 
 
         vegaEmbed('#Location1', figure_1_spec) // We're using the vegaEmbed function to put a graph in the element with id figure_1
         vegaEmbed('#Location2', figure_2_spec)
         vegaEmbed('#Location3', figure_3_spec)
         vegaEmbed('#Location4', figure_4_spec)
-
+vegaEmbed('#Location4', figure_4_spec)
         // Do you want to add more graphs?
         // try defining a new variable for figure_3_spec, adding VegaEmbed for Location3, and adding a new section in the HTML
         // e.g. 
