--- a/index.html
+++ b/index.html
@@ -101,6 +101,15 @@
             </div>
             <figure id="Location4"></figure> <!-- we give it an id so we can put a vega-lite graph here with VegaEmbed -->
         </section>
+        <section>
+            <div class="chart-description">
+                <h2>Section 5: UK CPI</h2>
+                <p> <!-- This is a paragraph, it's the main way to display text on a web page -->
+                   
+                </p>
+            </div>
+            <figure id="Location5"></figure> <!-- we give it an id so we can put a vega-lite graph here with VegaEmbed -->
+        </section>
     <!-- This is a script, it's a way to run JavaScript code on the page -->
     <script>
         // This is a comment in JavaScript - it's a different language to HTML and CSS
@@ -108,7 +117,8 @@
         let figure_1_spec = "https://raw.githubusercontent.com/EconomicsObservatory/courses/main/2/s2_chart2.json"; // We're storing the URL of the graph we want to display in a variable
         let figure_2_spec = "wk1_unem_rate"                                                                                                           // You should have a spec for a graph in this same folder. Just specify its name here, e.g. let figure_1_spec = "chart1.json"
         let figure_3_spec = "wk1_unem_3countries.json"
-        let figure_4_spec = "employment_gb.txt" 
+        let figure_4_spec = "employment_gb.txt"
+        let figure_5_spec = "UK_CPI" 
 
         vegaEmbed('#Location1', figure_1_spec) // We're using the vegaEmbed function to put a graph in the element with id figure_1
         vegaEmbed('#Location2', figure_2_spec)
