--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </section>
         <section>
             <div class="chart-description">
-                <h2>Section 6: Employment, unemployment and economic inactivit</h2>
+                <h2>Section 6: Employment, unemployment and economic inactivity</h2>
                 <p> <!-- This is a paragraph, it's the main way to display text on a web page -->
                    
                 </p>
