--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         let figure_2_spec = "wk1_unem_rate"                                                                                                           // You should have a spec for a graph in this same folder. Just specify its name here, e.g. let figure_1_spec = "chart1.json"
         let figure_3_spec = "wk1_unem_3countries.json"
         let figure_4_spec = "employment_gb.txt"
-        let figure_5_spec = "UK_CPI.json" 
+        let figure_5_spec = "cpi.json" 
         let figure_6_spec = "type_activity.json"
 
         vegaEmbed('#Location1', figure_1_spec) // We're using the vegaEmbed function to put a graph in the element with id figure_1
