--- a/index.html
+++ b/index.html
@@ -119,6 +119,15 @@
             </div>
             <figure id="Location6"></figure> <!-- we give it an id so we can put a vega-lite graph here with VegaEmbed -->
         </section>
+        <section>
+            <div class="chart-description">
+                <h2>WEEK 3-1: UK Productivity Growth Rates</h2>
+                <p> <!-- This is a paragraph, it's the main way to display text on a web page -->
+                   
+                </p>
+            </div>
+            <figure id="Location7"></figure> <!-- we give it an id so we can put a vega-lite graph here with VegaEmbed -->
+        </section>
     <!-- This is a script, it's a way to run JavaScript code on the page -->
     <script>
         // This is a comment in JavaScript - it's a different language to HTML and CSS
