--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
         <section>
             <div class="chart-description">
-                <h2>Section 4: Unemployment to population in Great Britain</h2>
+                <h2>WEEK 2-1: Unemployment to population in Great Britain</h2>
                 <p> <!-- This is a paragraph, it's the main way to display text on a web page -->
                    
                 </p>
@@ -112,7 +112,7 @@
         </section>
         <section>
             <div class="chart-description">
-                <h2>Section 6: Employment, unemployment and economic inactivity</h2>
+                <h2>WEEK 2-2: Employment, unemployment and economic inactivity</h2>
                 <p> <!-- This is a paragraph, it's the main way to display text on a web page -->
                    
                 </p>
