--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
         <section>
             <div class="chart-description">
-                <h2>WEEK 2-1: Unemployment to population in Great Britain</h2>
+                <h2>WEEK 1-3: Unemployment to population in Great Britain</h2>
                 <p> <!-- This is a paragraph, it's the main way to display text on a web page -->
                    
                 </p>
@@ -103,7 +103,7 @@
         </section>
         <section>
             <div class="chart-description">
-                <h2>Section 5: UK CPI </h2>
+                <h2>WEEK 2-1: UK CPI </h2>
                 <p> <!-- This is a paragraph, it's the main way to display text on a web page -->
                    
                 </p>
@@ -138,7 +138,7 @@
         let figure_4_spec = "employment_gb.txt"
         let figure_5_spec = "cpi.json" 
         let figure_6_spec = "type_activity.json"
-        let figure_7_spec = "productivity1"
+        let figure_7_spec = "productivity1.json"
 
         vegaEmbed('#Location1', figure_1_spec) // We're using the vegaEmbed function to put a graph in the element with id figure_1
         vegaEmbed('#Location2', figure_2_spec)
