--- a/index.html
+++ b/index.html
@@ -128,6 +128,15 @@
             </div>
             <figure id="Location7"></figure> <!-- we give it an id so we can put a vega-lite graph here with VegaEmbed -->
         </section>
+         <section>
+            <div class="chart-description">
+                <h2>WEEK 3-2: UK Productivity (Output per worker)</h2>
+                <p> <!-- This is a paragraph, it's the main way to display text on a web page -->
+                   
+                </p>
+            </div>
+            <figure id="Location8"></figure> <!-- we give it an id so we can put a vega-lite graph here with VegaEmbed -->
+        </section>
     <!-- This is a script, it's a way to run JavaScript code on the page -->
     <script>
         // This is a comment in JavaScript - it's a different language to HTML and CSS
@@ -139,6 +148,7 @@
         let figure_5_spec = "cpi.json" 
         let figure_6_spec = "type_activity.json"
         let figure_7_spec = "productivity1.json"
+        let figure_8_spec = "Outputperworker.json"
 
         vegaEmbed('#Location1', figure_1_spec) // We're using the vegaEmbed function to put a graph in the element with id figure_1
         vegaEmbed('#Location2', figure_2_spec)
@@ -147,6 +157,7 @@
         vegaEmbed('#Location5', figure_5_spec)
         vegaEmbed('#Location6', figure_6_spec)
         vegaEmbed('#Location7', figure_7_spec)
+        vegaEmbed('#Location8', figure_8_spec)
         // Do you want to add more graphs?
         // try defining a new variable for figure_3_spec, adding VegaEmbed for Location3, and adding a new section in the HTML
         // e.g. 
