--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         let figure_4_spec = "employment_gb.txt"
         let figure_5_spec = "cpi.json" 
         let figure_6_spec = "type_activity.json"
-        let figure_7_spec = "productivity1.json"
+        let figure_7_spec = "productivity_long_form.json"
         let figure_8_spec = "Outputperworker.json"
 
         vegaEmbed('#Location1', figure_1_spec) // We're using the vegaEmbed function to put a graph in the element with id figure_1
