--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         let figure_5_spec = "cpi.json" 
         let figure_6_spec = "type_activity.json"
         let figure_7_spec = "Outputperworker.json"
-        let figure_8_spec = "productivity.
+        let figure_8_spec = "productivity.json"
 
         vegaEmbed('#Location1', figure_1_spec) // We're using the vegaEmbed function to put a graph in the element with id figure_1
         vegaEmbed('#Location2', figure_2_spec)
@@ -158,6 +158,7 @@
         vegaEmbed('#Location5', figure_5_spec)
         vegaEmbed('#Location6', figure_6_spec)
         vegaEmbed('#Location7', figure_7_spec)
+        vegaEmbed('#Location8', figure_8_spec)
        
         // Do you want to add more graphs?
         // try defining a new variable for figure_3_spec, adding VegaEmbed for Location3, and adding a new section in the HTML
