--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         </section>
         <section>
             <div class="chart-description">
-                <h2>WEEK 3-1: UK Productivity (Output per worker)</h2>
+                <h2>WEEK 3-1: Productivity and investment</h2>
                 <p> <!-- This is a paragraph, it's the main way to display text on a web page -->
                    
                 </p>
@@ -148,7 +148,7 @@
         let figure_4_spec = "employment_gb.txt"
         let figure_5_spec = "cpi.json" 
         let figure_6_spec = "type_activity.json"
-        let figure_7_spec = "productivity.json"
+        let figure_7_spec = "investment.json"
         let figure_9_spec = "productivity.json"
 
         vegaEmbed('#Location1', figure_1_spec) // We're using the vegaEmbed function to put a graph in the element with id figure_1
