--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         let figure_6_spec = "type_activity.json"
         let figure_7_spec = "investment.json" 
         let figure_8_spec = "Outputperworker.json"
-        let figure_9_sepc = "investment.json"
+        let figure_9_sepc = "Investment.json"
        
 
         vegaEmbed('#Location1', figure_1_spec) // We're using the vegaEmbed function to put a graph in the element with id figure_1
