--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         let figure_4_spec = "employment_gb.txt"
         let figure_5_spec = "cpi.json" 
         let figure_6_spec = "type_activity.json"
-        let figure_7_spec = "Outputperworker.json"
+        let figure_7_spec = "https://raw.githubusercontent.com/Hyejin-Sung/Hyejin-Sung.github.io/refs/heads/main/Outputperworker.json"
         let figure_8_spec = "InvestmentGDP.json"
       
 
