--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         let figure_5_spec = "cpi.json" 
         let figure_6_spec = "type_activity.json"
         let figure_7_spec = "https://raw.githubusercontent.com/Hyejin-Sung/Hyejin-Sung.github.io/refs/heads/main/Outputperworker.json"
-        let Chart8 = "InvestmentGDP.json"
+        let figurt_8_spec = "InvestmentGDP.json"
       
 
         vegaEmbed('#Location1', figure_1_spec) // We're using the vegaEmbed function to put a graph in the element with id figure_1
