--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         let figure_5_spec = "cpi.json" 
         let figure_6_spec = "type_activity.json"
         let figure_7_spec = "Outputperworker.json"
-        let figurt_8_spec = "InvestmentGDP.json"
+        let figure_8_spec = "InvestmentGDP.json"
       
 
         vegaEmbed('#Location1', figure_1_spec) // We're using the vegaEmbed function to put a graph in the element with id figure_1
