--- a/portfolio.html
+++ b/portfolio.html
@@ -164,6 +164,8 @@
         vegaEmbed('#Location6', figure_6_spec)
         vegaEmbed('#Location7', figure_7_spec)
         vegaEmbed('#Location8', figure_8_spec)
+        vegaEmbed('#Location9', figure_9_spec)
+        vegaEmbed('#Location10', figure_10_spec)
         vegaEmbed('#Location11', figure_11_spec)
      
         
