--- a/portfolio.html
+++ b/portfolio.html
@@ -122,6 +122,9 @@
         <section>
             <div class="chart-description">
                 <h2>(CC4) Replication, Re-create, then improve, someone else's chart</h2>
+                <p> 
+                    <img src="pbr.png" alt="decreasing PBR" width="600">
+                </p>
                 <p> <!-- This is a paragraph, it's the main way to display text on a web page -->
                     I used the line graph to clearly show trends and fluctuations over time, eliminating unnecessary elements like varied bar colours to focus on data patterns.
                     (source: https://n.news.naver.com/mnews/article/015/0005057310 )
