--- a/portfolio.html
+++ b/portfolio.html
@@ -139,8 +139,18 @@
             <p> <!-- This is a paragraph, it's the main way to display text on a web page -->
                 The World Bank offers comprehensive, reliable data for cross-country and longitudinal analysis, making it well-suited for comparative studies.
             </p>
+            <h2>Section 1: my python Notebook
+            </h2>
+            <p><a href="https://colab.research.google.com/drive/1_XmgZ-33vJyjpK-pFsoJQsSVilrXO3QS#scrollTo=afvRTMw0Ijir">Link to my work in Google Collab python notebook </a></p>
         </div>
-        <figure id="Location11"></figure> <!-- we give it an id so we can put a vega-lite graph here with VegaEmbed -->
+    </section>
+    <section>
+        <div class="chart-description">
+            <h2>Section 2: Graph from the scrapping data</h2>
+            <p> </p>
+        </div>
+        <figure id="Location11"></figure> 
+      
     </section>
     <!-- This is a script, it's a way to run JavaScript code on the page -->
     <script>
@@ -156,7 +166,7 @@
         let figure_8_spec = "InvestmentGDP.json"
         let figure_9_spec = "original_pbr.json"
         let figure_10_spec = "revised_pbr.json"
-        let figure_11_spec = "gap_ex_pop_region.json"
+        let figure_11_spec = "g7_education.json"
       
 
         vegaEmbed('#Location1', figure_1_spec) // We're using the vegaEmbed function to put a graph in the element with id figure_1
