--- a/portfolio.html
+++ b/portfolio.html
@@ -195,7 +195,7 @@
         let figure_9_spec = "original_pbr.json"
         let figure_10_spec = "revised_pbr.json"
         let figure_11_spec = "g7_education.json"
-        let figure_12_spec = "9series.json"
+        let figure_12_spec = "9series_graph.json"
         let figure_13_spec = "map_base.json"
         let figure_14_spec = "map_tip.json"
       
