--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <p style="margin-top: 0px; color: darkblue">
         <!-- we're setting the margin to 0px so the header and authour name are close together -->
         Hyejin | <a href="https://www.linkedin.com/in/YOUR_LINKEDIN/">LinkedIn</a> | 
-        <a href="http://Hyejin-Sung.github.io/portfolio.html">Project</a> | 
+        <a href="http://Hyejin-Sung.github.io/project.html">Project</a> | 
         <a href="http://Hyejin-Sung.github.io/portfolio.html">Portfolio </a>
     </p>
     <h3 class="small"> <!-- We have added a class to the header called "small" which we can use to style it in the CSS -->
