--- a/project.html
+++ b/project.html
@@ -78,7 +78,7 @@ The primary research question emerges: How, and to what extent, does Korean cult
             <div class="chart-description">
                 <h3>Evolving K-pop Popularity</h3>
                 <p> <!-- This is a paragraph, it's the main way to display text on a web page -->
-                    The graph tracks cumulative views of official YouTube channels for three prominent groups - Blackpink, BTS, and TWICE - from 2016 to 2024 (noting that BTS's official channel relaunched in 2019). Together, these groups have amassed almost 5 trillion total views in 2024 since the view has skyrocketed from 2018.
+                    The graph tracks cumulative views of official YouTube channels for three prominent groups - Blackpink, BTS, and TWICE - from 2016 to 2024 (noting that BTS's official channel relaunched in 2019). Together, these groups have amassed almost 5 trillion total views in 2024 since the view has increased from 2018.
                 </p>
             </div>
             <iframe
@@ -149,7 +149,7 @@ The primary research question emerges: How, and to what extent, does Korean cult
             <p> Overall, while K-pop's direct contribution to economic growth appears modest, its impact is more significant when considering broader effects. The industry creates a ripple effect by increasing interest in Korea, leading to higher consumption of Korean dramas, food, other cultural products, and travelling to Korea - suggesting its total economic contribution likely exceeds direct revenue estimates. Additionally, K-pop's market expansion from its traditional Asian base into Europe and the Americas indicates substantial growth potential for further economic contribution. Future research could examine the specific mechanisms linking cultural popularity to economic outcomes and precisely estimate the broad economic effects.</p>
             <h2>
      
-                DATA used and Challenges in data cleaning
+                DATA Source and Challenges in Data Cleaning
             </h2>
                 <p> I used Google Trends data alongside YouTube viewership statistics accessed through their API, with particular attention to major K-pop groups like BTS and Blackpink. Additional cultural and tourism insights were gathered from publications by the Korean  Organisations. The major challenge concerned language and search term variations, in Google and YouTube data collection. Video titles appeared in multiple languages across numerous channels, complicating consistent tracking. I resolved this by focusing on the major K-pop groups and the official channel IDs of K-pop groups in Youtube, providing a more reliable metric of popularity. Accessibility on K-pop sales data presented the another challenge. Since it was challenging to data to estimate the relevant sales and Korean organisations typically don't provide open APIs or raw data, I created CSV files based on the publications</p>
         <script>
