--- a/project.html
+++ b/project.html
@@ -60,7 +60,7 @@ The primary research question emerges: How, and to what extent, does Korean cult
 
         <section>
             <div class="chart-description">
-                <h3>Global interest in K-pop</h3>
+                <h3>Global Interest in K-pop</h3>
                 <p> <!-- This is a paragraph, it's the main way to display text on a web page -->
                     This map illustrates the search interest for Blackpink and BTS based on Google Trends data. K-pop's global reach is evident across the map, with particularly intense popularity in Southeast Asia, Central Asia, West Africa, and several European countries. While I aimed to embed a real-time visual through Dash and ngrok, free ngrok was valid only for two hours. As such, I used this map instead.
                 </p>
