--- a/project.html
+++ b/project.html
@@ -78,7 +78,7 @@ The primary research question emerges: How, and to what extent, does Korean cult
             <div class="chart-description">
                 <h3>Evolving K-pop Popularity</h3>
                 <p> <!-- This is a paragraph, it's the main way to display text on a web page -->
-                    The graph tracks cumulative views of official YouTube channels for three prominent groups - Blackpink, BTS, and TWICE - from 2016 to 2024 (noting that BTS's official channel relaunched in 2019). Together, these groups have amassed almost 5 trillion total views in 2024 since the view has increased from 2018.
+                    The graph tracks cumulative views of official YouTube channels for three prominent groups - Blackpink, BTS, and TWICE - from 2016 to 2024 (noting that BTS's official channel relaunched in 2019). Having rapidly increased over the past 5 years, these groups have amassed almost 5 trillion total views in 2024.
                 </p>
             </div>
             <iframe
