--- a/project.html
+++ b/project.html
@@ -129,7 +129,7 @@ The primary research question emerges: How, and to what extent, does Korean cult
         </section>
         <section>
       
-            <h3>Korea's Cultural Identity
+            <h3> Visitor Arrivals in Korea
             </h3>
             <div class="center-graph">
             <figure id="Location5"></figure> </div>
