--- a/portfolio.html
+++ b/portfolio.html
@@ -191,7 +191,7 @@
             
             <p> If you click on an item on the legend, the selected region is highlighted.</p>
             <figure id="Location18"></figure> 
-            <h2>Graph 2: Interactive head map </h2>
+            <h2>Graph 2: Interactive heat map </h2>
             <p> You can hover over any country to see the number of BLACKPINK concerts held there. The selected country will be highlighted while others fade into the background</p>
             <a href=" https://colab.research.google.com/drive/1c3EwNQekC7gC0Qo6bl4D8d32tGUswExA?usp=sharing">my co-lab notebook
            
