--- a/portfolio.html
+++ b/portfolio.html
@@ -189,7 +189,7 @@
         <h2>Graph 1: Interactive through legend
             </h2>
             
-            <p> If you click on an item on the legend, the selected region is highlighted.</p>
+            <p> Regions can be highlighted by clicking their corresponding legend items.</p>
             <figure id="Location18"></figure> 
             <h2>Graph 2: Interactive heat map </h2>
             <p> You can hover over any country to see the number of BLACKPINK concerts held there. The selected country will be highlighted while others fade into the background</p>
